examples/datalog/10_edge_cases/46_zero_values.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_zeros
Knowledge graph 'test_zeros' created.
Switched to knowledge graph: test_zeros
> .kg use test_zeros
Switched to knowledge graph: test_zeros
> +nums[(0,), (1,), (-1,)].
Inserted 3 fact(s) into 'nums'.
> plus_zero(X, Y) :- nums(X), Y = X + 0.
Script error: Query execution failed: Unsafe rule: Atom { relation: "plus_zero", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
