examples/datalog/10_edge_cases/46_zero_values.dl
% Test: Zero values in various contexts
% Expected: Zero handled correctly in all operations
% Category: 10_edge_cases
% Priority: P2 - Edge cases

.kg create test_zeros
.kg use test_zeros

+nums[(0,), (1,), (-1,)].

% Arithmetic with zero
plus_zero(X, Y) :- nums(X), Y = X + 0.

?- plus_zero(X, Y).

mult_zero(X, Y) :- nums(X), Y = X * 0.

?- mult_zero(X, Y).

% Comparison with zero
is_zero(X) :- nums(X), X = 0.

?- is_zero(X).

is_positive(X) :- nums(X), X > 0.

?- is_positive(X).

.kg use default
.kg drop test_zeros
